fixed minor layout issuespart 2

--- a/djr8/css/style.css
+++ b/djr8/css/style.css
@@ -146,7 +146,7 @@ nav {
 }
 .text-sm {
 	background: none;
-	font-size: 1.7rem;
+	font-size: 1.2rem;
 	width: 60%;
 	text-shadow: .5px .5px 0 #fff;
 }
